# nb-cli-plugin-littlepaimon

./: .pre-commit-config.yaml  README.md  pyproject.toml
nb_cli_plugin_littlepaimon/: __init__.py  cli.py  config.yml  config_template.yml  create.py  gocq.py  handler.py  meta.py  plugin.py
nb_cli_plugin_littlepaimon/commands/: __init__.py  create.py  install.py  resources.py  run.py  update.py
nb_cli_plugin_littlepaimon/handlers/: __init__.py  cmd.py  download.py  gocq.py
